--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: #d9d9d9;
+}
+
+ul{
+  display: flex;
+  list-style: none;
+}
+
+header{
+  background-color: #483d8b;
+  text-transform: uppercase;
+}
+
+footer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  background-color: #4B0082;
+}
+
+footer span, footer h2{
+  padding: 0.5rem;
+  color: #fff;
+}
+
+footer div{
+  padding: 20px 10px;
+  font-size: 30px;
 }
